[package]
edition = "2021"
name = "sheno_db"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
env_logger = "0.8.3"
log = "0.4.14"
rustyline = "7.1.0"
rustyline-derive = "0.4.0"
sqlparser = "0.17.0"
thiserror = "1.0.38"
